# pydantic-ai-tutorial

./: pyproject.toml
src/: bank_support.py  hello_world.py
